goofit_add_library(PdfPhysics
    Amp4Body.cu
    Amp3Body.cu
    Amp4BodyT.cu
    Amp3BodyT.cu
    Amp4BodyGlobals.cu
    DalitzPlotHelpers.cu
    SpecialResonanceIntegrator.cu
    SpecialResonanceCalculator.cu
    SpecialDalitzIntegrator.cu
    SpecialWaveCalculator.cu
    DalitzVetoPdf.cu
    IncoherentSumPdf.cu
    MixingTimeResolution_Aux.cu
    SpinFactors.cu
    ThreeGaussResolution_Aux.cu
    TruthResolution_Aux.cu
    AmpCalc.cu
    LSCalculator.cu
    NormIntegrator.cu
    NormLSCalculator.cu
    NormSpinCalculator.cu
    SFCalculator.cu
    AmpCalc_TD.cu
    FourDblTupleAdd.cu
    LSCalculator_TD.cu
    NormIntegrator_TD.cu
    NormLSCalculator_TD.cu
    NormSpinCalculator_TD.cu
    SFCalculator_TD.cu
    lineshapes/Lineshape.cu
    lineshapes/BW.cu
    lineshapes/Common.cu
    lineshapes/Focus.cu
    lineshapes/Bugg.cu
    lineshapes/Flatte.cu
    lineshapes/GLASS.cu
    lineshapes/GSpline.cu
    lineshapes/NonRes.cu
    lineshapes/One.cu
    resonances/Resonance.cu
    resonances/FLATTE.cu
    resonances/Gauss.cu
    resonances/GS.cu
    resonances/LASS.cu
    resonances/NonRes.cu
    resonances/RBW.cu
    resonances/Spline.cu
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/AmpNBodyBase.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp3BodyBase.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp3Body.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp3BodyT.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp4BodyBase.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp4Body.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/Amp4BodyT.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/NormSpinCalculator.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/NormSpinCalculator_TD.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/DalitzPlotHelpers.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/DalitzPlotPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/DalitzPlotter.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/DalitzVetoPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/EvalVar.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/IncoherentSumPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/LineshapesPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/MixingTimeResolution_Aux.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/ResonancePdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/SpinFactors.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/SpinHelper.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/SpecialDalitzIntegrator.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/SpecialWaveCalculator.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/SpecialComplexSum.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/ThreeGaussResolution_Aux.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/TruthResolution_Aux.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/physics/UserUtils.h
)

if(GOOFIT_KMATRIX AND GOOFIT_DEVICE STREQUAL CUDA)
    target_sources(PdfPhysics PRIVATE
        lineshapes/kMatrix.cu
        ${PROJECT_SOURCE_DIR}/include/goofit/detail/compute_inverse5.h
    )
endif()

target_link_libraries(PdfPhysics PUBLIC PDFCore)
